update print di admin kantor dan pilihan norek di nota adminkantor

--- a/admin_kantor/rincian_nota.html
+++ b/admin_kantor/rincian_nota.html
@@ -354,6 +354,12 @@
 										<h2 style="margin-top: 30px" align="left" class="header-pesanan">
 											Invoice Sukses Sejuk Mandiri
 										</h2><br>
+										<button onclick="window.location.href='print_nota.html'" style="padding: 5px;width: 200px" class="btn btn-primary">
+											Print Nota
+										</button>
+										<h3 name="no_invoice" class="header-pesanan-no"> 
+											<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
+										</h3><br><br>
 										<div class="info row">
 											<div class="col-sm">
 												<p id="tanggal_surat">
@@ -369,9 +375,6 @@
 											<div class="col-sm">
 												<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
 												<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
-												<p>
-													No Invoice : <span id="no_invoice">123123123</span>
-												</p>
 											</div>
 										</div>	
 									</div>
