--- a/admin_kantor/rincian_penawaran.html
+++ b/admin_kantor/rincian_penawaran.html
@@ -363,6 +363,9 @@
 										<h3 style="text-align: center;" class="header-pesanan">
 											PENAWARAN PT SUKSES SEJUK MANDIRI
 										</h3><br>
+										<button onclick="window.location.href='print_penawaran.html'" style="padding: 5px;width: 200px" class="btn btn-primary">
+											Print Penawaran
+										</button>
 										<h3  class="header-pesanan-no"> 
 											Reff : <span name="no_reff">116/SPH-AC/SSM/X/2018</span>
 										</h3><br><br>
