--- a/admin_kantor/rincian_spk_pemasangan_free.html
+++ b/admin_kantor/rincian_spk_pemasangan_free.html
@@ -349,6 +349,9 @@
 										<h3 name="no_surat_jalan" class="header-pesanan-no"> 
 											<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
 										</h3><br><br>
+										<button onclick="window.location.href='print_spk_free.html'" style="padding: 5px;width: 200px" class="btn btn-primary">
+											Print SPK Free
+										</button>
 										<div class="info row">
 											<div class="col-sm">
 												<p id="tanggal_surat">
