--- a/admin_kantor/rincian_spk_servis.html
+++ b/admin_kantor/rincian_spk_servis.html
@@ -358,6 +358,9 @@
 									<div class="m-portlet__head header">
 										<h3 class="header-pesanan">
 										</h3><br>
+										<button onclick="window.location.href='print_spk_servis.html'" style="padding: 5px;width: 200px" class="btn btn-primary">
+											Print SPK Servis
+										</button>
 										<h3 name="no_surat_jalan" class="header-pesanan-no"> 
 											<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
 										</h3><br><br>
