--- a/admin_toko/rincian_nota.html
+++ b/admin_toko/rincian_nota.html
@@ -372,10 +372,27 @@
 													<i class="fa fa-phone"> </i> 085-145-322-137
 												</p>
 											</div>
-											<div class="col-sm">
+											<div style="margin-bottom: 10px" class="col-sm">
 												<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
 												<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
-												
+												<div class="form-group m-form__group row">
+													<label for="example-search-input" class="col-2 col-form-label">
+														Norek :
+													</label>
+													<div  class="col-10">
+														<select style="width: 230px" class="form-control m-input m-input--square" id="norek_bank">
+															<option value="0">
+																--Pilih Bank--
+															</option>
+															<option value="1">
+																BCA | 797-038-5678
+															</option>
+															<option value="2">
+																BCA | 797-013-3393
+															</option>
+														</select>
+													</div>
+												</div>
 											</div>
 										</div>	
 									</div>
@@ -439,8 +456,6 @@
 												<th style="width: 15%" class="tg-s268">139,298,500</th>
 											</tr>
 										</table>
-										<p>Pembayaran dapat dikirmkan ke nomer rekening :</p>
-										<p style="font-size: 1.3rem" id="no_rekening_ssm">BNI 12345678</p>
 										<!--end: Datatable -->
 										<div style="margin-top: 20px" class="row">
 											<div align="center" class="col-sm">
