--- a/teknisi_2/respon_konsumen.html
+++ b/teknisi_2/respon_konsumen.html
@@ -49,6 +49,23 @@
 				background-color: #ededed;
 			}
 		</style>
+		<style>
+			.m-datatable.m-datatable--default > .m-datatable__pager > .m-datatable__pager-info {
+				display: none !important;
+			}
+			.tg  {border-collapse:collapse;border-spacing:0;}
+			.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+			.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+			.tg .tg-s268{
+				text-align:center;
+				font-size: 1.2rem;
+				font-weight: 600;
+			}
+			.tlu {
+				border-top: transparent !important;
+			}
+
+		</style>
 	</head>
 	<!-- end::Head -->
 	<!-- end::Body -->
@@ -71,6 +88,39 @@
 						<div class="m-portlet__body" style="width: 100vw">
 							<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
 								<div class="row align-items-center">
+									<div class="col-md-12 m--margin-bottom-20">
+										<div >
+											<h4 align="center">
+												List Item 
+											</h4>
+											<table style="width: 100%" class="tg">
+												<thead>
+													<tr>
+														<th style="width: 50%" class="tg-s268" >Nama item</th>
+														<th style="width: 25%" class="tg-s268" >Qty</th>
+														<th style="width: 25%" class="tg-s268" >Satuan</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<th style="width: 50%" class="tg-s268" >AC Daikin 1/2 PK thailand</th>
+														<th style="width: 25%" class="tg-s268" >2</th>
+														<th style="width: 25%" class="tg-s268" >Unit</th>
+													</tr>
+													<tr>
+														<th style="width: 50%" class="tg-s268" >Pipa</th>
+														<th style="width: 25%" class="tg-s268" >3</th>
+														<th style="width: 25%" class="tg-s268" >meter</th>
+													</tr>
+													<tr>
+														<th style="width: 50%" class="tg-s268" >Bracket</th>
+														<th style="width: 25%" class="tg-s268" >2</th>
+														<th style="width: 25%" class="tg-s268" >Set</th>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</div>
 									<div class="col-md-12">
 										<div class="info row">
 											<div class="col-sm">
