--- a/teknisi_2/rincian_spk_selesai.html
+++ b/teknisi_2/rincian_spk_selesai.html
@@ -80,25 +80,28 @@
 							<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
 								<div class="row align-items-center">
 									<div class="col-md-12">
-										<div class="info row">
-											<div class="col-sm">
-												<h3>Pemasangan</h3>
-												<p id="id_pelanggan">
+											<div class="info row informasi">
+											<div class="col-md-12 row">
+												<h3 class="col-6">Pemasangan</h3>
+												<button class="col-6 btn btn-primary">
+													Manajemen foto
+												</button>
+												<p class="col-8" id="id_pelanggan">
 													<i class="">No SPK :</i> 032819-001
 												</p> 
-												<p id="tanggal_surat">
+												<p class="col-8" id="tanggal_surat">
 													<i class="flaticon-calendar-2"> </i>20/11/19
 												</p> 
-												<p id="nama_pelanggan">
+												<p class="col-8" id="nama_pelanggan">
 													<i class="flaticon-users"> </i> Ahmad Rifaldi
 												</p>
-												<p id="no_telpon">
+												<p class="col-8" id="no_telpon">
 													<i class="fa fa-phone"> </i> 085-145-322-137
 												</p>
 											</div>
-											<div class="col-sm">
-												<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
-												<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
+											<div class="col-md-12 row">
+												<p class="col-8" id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
+												<p class="col-8" id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
 											</div>
 										</div>
 										<div style="margin-top: 20px" class="info row">
