--- a/admin_kantor/print_spk_pemasangan.html
+++ b/admin_kantor/print_spk_pemasangan.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>
-		Print Nota
+		Print SPK Pemasangan
 	</title>
 	<meta name="description" content="Latest updates and statistic charts">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,10 +39,7 @@
 			.table {
 				min-height : 300px !important;
 			}
-			.header-pesanan {
-				font-size: 2.6rem !important;
-				font-weight: 500;
-			}
+
 			th {
 				font-size: 1.7rem !important;
 			}
@@ -52,7 +49,7 @@
 			}
 
 			p {
-				font-size: 1.3rem !important;
+				font-size: 1.8rem !important;
 			}
 			label {
 				font-size: 1.6rem !important;
@@ -61,7 +58,7 @@
 				font-size: 1.6rem !important;
 			}
 			h3 {
-				font-size: 1.5rem !important;
+				font-size: 2rem !important;
 			}
 
 			.font-print {
@@ -99,11 +96,6 @@
 				display: none;
 			}
 
-			#norek_bank {
-				font-size: 2.2rem !important;
-				font-weight: 500;
-			}
-
 		}
 
 	</style>
@@ -117,10 +109,10 @@
 				<div class="col-xl-12">
 					<div class="m-portlet m-portlet--tab">
 						<div class="m-portlet__head header">
-							<h2 style="margin-top: 30px" align="left" class="header-pesanan">
-								Invoice Sukses Sejuk Mandiri
-							</h2><br>
-							<h3 name="no_invoice" class="header-pesanan-no"> 
+							<h3 class="header-pesanan">
+								SPK Pemasangan
+							</h3><br>
+							<h3 name="no_surat_jalan" class="header-pesanan-no"> 
 								<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
 							</h3><br><br>
 							<div class="info row">
@@ -134,11 +126,20 @@
 									<p id="no_telpon">
 										<i class="fa fa-phone"> </i> 085-145-322-137
 									</p>
+									<p>
+										Tanggal Mulai : 
+										<span id="tgl_mulai">
+										23/03/19 10.10</span>
+									</p>
+									<p>
+										Tanggal Selesai : <span id="tgl_selesai">25/03/19 11.15</span>
+									</p>
 								</div>
 								<div class="col-sm">
 									<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
 									<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
-
+									<p>Teknisi : <span id="nama_teknisi">Ridwan</span></p>
+									<p>Status : <span id="status_spk">Selesai</span></p>
 								</div>
 							</div>	
 						</div>
@@ -146,84 +147,54 @@
 							<!--end: Search Form -->
 							<!--begin: Datatable -->
 							<!-- <div class="m_datatable" id="local_data"></div> -->
-							<table class="table" id="tbl_rincian_nota">
+							<table class="table" id="tbl_rincian_spk_pemasangan">
 								<thead>
 									<tr>
-										<th>Qty</th>
-										<th>Sat</th>
+										<th>No</th>
 										<th>Nama Barang</th>
-										<th>Harga</th>
-										<th>Harga Khusus</th>
 										<th>Jumlah</th>
+										<th>Keterangan</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
-										<td>4</td>
-										<td>unit</td>
-										<td>AC Daikin 1/2 PK Thailand</td>
-										<td>31,640,000</td>
+										<td>1</td>
+										<td>AC Split 1/2 PK Daikin R32 Non Inverter Thailand</td>
+										<td>2</td>
 										<td>-</td>
-										<td>126,560,000</td>
-									</tr>
-									<tr>
-										<td>3</td>
-										<td>meter</td>
-										<td>Pipa</td>
-										<td>30,000</td>
-										<td>25,000</td>
-										<td>75,000</td>
 									</tr>
 								</tbody>
 							</table>
-							<table style="width: 100%" class="tg">
-								<tr>
-									<th style="width: 10%" class="tg-s268"></th>
-									<th style="width: 10%" class="tg-s268"></th>
-									<th style="width: 20%" class="tg-s268"></th>
-									<th style="width: 20%" class="tg-s268"></th>
-									<th id="sub_total" align="right" style="width: 25%" class="tg-s268">SUB TOTAL</th>
-									<th style="width: 15%" class="tg-s268">126,635,000</th>
-								</tr>
-								<tr>
-									<th style="width: 10%" class="tg-s268"></th>
-									<th style="width: 10%" class="tg-s268"></th>
-									<th style="width: 20%" class="tg-s268"></th>
-									<th style="width: 20%" class="tg-s268"></th>
-									<th id="ppn" align="right" style="width: 25%" class="tg-s268">PPN 10%</th>
-									<th style="width: 15%" class="tg-s268">12,663,500</th>
-								</tr>
-								<tr>
-									<th style="width: 10%" class="tg-s268"></th>
-									<th style="width: 10%" class="tg-s268"></th>
-									<th style="width: 20%" class="tg-s268"></th>
-									<th style="width: 20%" class="tg-s268"></th>
-									<th id="total" align="right" style="width: 25%" class="tg-s268">TOTAL</th>
-									<th style="width: 15%" class="tg-s268">139,298,500</th>
-								</tr>
-							</table>
-							<p>Pembayaran dapat dikirmkan ke nomer rekening :</p>
-							<p style="font-size: 1.3rem" id="norek_bank">BCA | 797-038-5678</p>
 							<!--end: Datatable -->
-							<div style="margin-top: 20px" class="row">
-								<div align="center" class="col-sm">
-									<p><b>Tanda Terima</b></p>
-									<br>
-									<br>
-									<br>
-									<br>
-									<br>
-								</div>
-								<div align="center" class="col-sm">
-									<p><b>Hormat Kami</b></p>
-									<br>
-									<br>
-									<br>
-									<br>
-									<br>
-								</div>
-							</div>
 						</div>
+						<div class="m-accordion__item-content">
+													<div class="row">
+														<div class="heading col-sm">
+															<h5 align="center">Sebelum</h5>
+														</div>
+														<div class="heading col-sm">
+															<h5 align="center">Sesudah</h5>
+														</div>
+													</div>
+													<div id="item[0]" class="row">
+														<div class=" col-sm">
+															<img name="gambar_sebelum" class="gambar" src="https://s1.bukalapak.com/img/1376695601/w-1000/LG_AC_INVERTER_3_4_PK_T08EMV1_TERMURAH.jpg">
+
+														</div>
+														<div class=" col-sm">
+															<img name="gambar_sesudah" class="gambar" src="https://s1.bukalapak.com/img/1376695601/w-1000/LG_AC_INVERTER_3_4_PK_T08EMV1_TERMURAH.jpg">
+
+														</div>
+													</div>
+													<div id="item[1]" class="row">
+														<div class=" col-sm">
+															<img name="gambar_sebelum" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
+														</div>
+														<div class=" col-sm">
+															<img name="gambar_sesudah" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
+														</div>
+													</div>
+												</div>
 					</div>
 				</div>	
 			</div>
@@ -235,9 +206,9 @@
 <script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
 <script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
 <script type="text/javascript">
-			var tbl_list_item_masuk = $('#tbl_rincian_nota').mDatatable({
-				data: {
-					saveState: {cookie: false},
+	var tbl_list_item_masuk = $('#tbl_rincian_spk_pemasangan').mDatatable({
+		data: {
+			saveState: {cookie: false},
 					/*type: 'remote',
 			        source: {
 			          read: {
@@ -276,30 +247,20 @@
 				columns: [
 
 				{
-					field: 'Qty',
+					field: 'No',
 					textAlign: 'center',
-					width: 50,
-				},
-				{
-					field: 'Sat',
-					textAlign: 'center',
-					width: 50,
+					
 				},
 				{
 					field: 'Nama Barang',
 					textAlign: 'center',
-					width: 250,
 				},
 				{
 					field: 'Jumlah',
 					textAlign: 'center',
 				},
 				{
-					field: 'Harga',
-					textAlign: 'center',
-				},
-				{
-					field: 'Harga Khusus',
+					field: 'Keterangan',
 					textAlign: 'center',
 				}
 
