--- a/admin_kantor/spk_komplain.html
+++ b/admin_kantor/spk_komplain.html
@@ -388,7 +388,7 @@
 															<td>Bpk. Hendy</td>
 															<td>085145322137</td>
 															<td>
-																<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+																<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 															</td>
 														</tr>
 														<tr>
@@ -398,7 +398,7 @@
 															<td>Bpk. Suminto</td>
 															<td>085145322137</td>
 															<td>
-																<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+																<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 															</td>
 														</tr>
 														<tr>
@@ -408,7 +408,7 @@
 															<td>Bpk. Suminto</td>
 															<td>085145322137</td>
 															<td>
-																<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+																<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 															</td>
 														</tr>
 														<tr>
@@ -418,7 +418,7 @@
 															<td>Ibu Ida</td>
 															<td>085145322137</td>
 															<td>
-																<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+																<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 															</td>
 														</tr>
 														<tr>
@@ -428,7 +428,7 @@
 															<td>Ibu Sry</td>
 															<td>085145322137</td>
 															<td>
-																<a href="rincian_spk.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+																<a href="rincian_spk_komplain.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
 															</td>
 														</tr>
 													</tbody>
