--- a/teknisi_2/form_pemasangan.html
+++ b/teknisi_2/form_pemasangan.html
@@ -56,6 +56,20 @@
 			.m-portlet .m-portlet__body {
 				padding: 2px 2.2rem;
 			}
+			a {
+				text-decoration: none;
+				display: inline-block;
+				padding: 8px 16px;
+			}
+
+			a:hover {
+				background-color: #ddd;
+				color: black;
+			}
+			.previous {
+				background-color: #f1f1f1;
+				color: black;
+			}
 		</style>
 	</head>
 	<!-- end::Head -->
@@ -75,30 +89,36 @@
 		<div class="m-content">
 			<div class="row">
 				<div class="col-xl-12">
+					<div class="bagian-previous"> 
+						<a style="margin-left: 10px" href="javascript:history.back()" class="previous">&laquo; Previous</a>
+					</div>
 					<div class="m-portlet m-portlet--mobile">
 						<div class="m-portlet__body" style="width: 100vw">
 							<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
 								<div class="row align-items-center">
 									<div class="col-md-12">
-										<div class="info row">
-											<div class="col-sm">
-												<h3>Form Pemasangan</h3>
-												<p id="id_pelanggan">
+										<div class="info row informasi">
+											<div class="col-md-12 row">
+												<h3 class="col-8">Pemasangan</h3>
+												<button onclick="window.location.href = 'manajemen_foto.html';" class="col-4 btn btn-primary">
+													Manajemen<br>foto
+												</button>
+												<p class="col-8" id="id_pelanggan">
 													<i class="">No SPK :</i> 032819-001
 												</p> 
-												<p id="tanggal_surat">
+												<p class="col-8" id="tanggal_surat">
 													<i class="flaticon-calendar-2"> </i>20/11/19
 												</p> 
-												<p id="nama_pelanggan">
+												<p class="col-8" id="nama_pelanggan">
 													<i class="flaticon-users"> </i> Ahmad Rifaldi
 												</p>
-												<p id="no_telpon">
+												<p class="col-8" id="no_telpon">
 													<i class="fa fa-phone"> </i> 085-145-322-137
 												</p>
 											</div>
-											<div class="col-sm">
-												<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
-												<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
+											<div class="col-md-12 row">
+												<p class="col-8" id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
+												<p class="col-8" id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
 											</div>
 										</div>
 										<div style="margin-top: 20px" class="info row">
@@ -582,7 +602,7 @@
 										</div>
 										<div align="center">
 											<button style="height: 60px;width: 300px; margin-top: 30px" onclick="window.location.href = 'respon_konsumen.html';" type="button" class="btn btn-primary warna-biru">
-												Respon Konsumen
+												Selesai
 											</button>
 										</div>
 									</div>
