--- a/teknisi_2/tugas_selesai.html
+++ b/teknisi_2/tugas_selesai.html
@@ -52,6 +52,20 @@
 			p {
 				margin-bottom: .2rem;
 			}
+			a {
+				text-decoration: none;
+				display: inline-block;
+				padding: 8px 16px;
+			}
+
+			a:hover {
+				background-color: #ddd;
+				color: black;
+			}
+			.previous {
+				background-color: #f1f1f1;
+				color: black;
+			}
 		</style>
 	</head>
 	<!-- end::Head -->
@@ -130,6 +144,9 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="bagian-previous"> 
+					<a style="margin-left: 10px" href="javascript:history.back()" class="previous">&laquo; Previous</a>
 				</div>
 			</div>
 		</div>
