update pilih norek admin kantor

--- a/admin_kantor/print_nota.html
+++ b/admin_kantor/print_nota.html
@@ -39,7 +39,10 @@
 			.table {
 				min-height : 300px !important;
 			}
-
+			.header-pesanan {
+				font-size: 2.6rem !important;
+				font-weight: 500;
+			}
 			th {
 				font-size: 1.7rem !important;
 			}
@@ -49,7 +52,7 @@
 			}
 
 			p {
-				font-size: 1.8rem !important;
+				font-size: 1.3rem !important;
 			}
 			label {
 				font-size: 1.6rem !important;
@@ -58,7 +61,7 @@
 				font-size: 1.6rem !important;
 			}
 			h3 {
-				font-size: 2rem !important;
+				font-size: 1.5rem !important;
 			}
 
 			.font-print {
@@ -94,6 +97,11 @@
 
 			.m-datatable__pager-info{
 				display: none;
+			}
+
+			#norek_bank {
+				font-size: 2.2rem !important;
+				font-weight: 500;
 			}
 
 		}
@@ -195,7 +203,7 @@
 								</tr>
 							</table>
 							<p>Pembayaran dapat dikirmkan ke nomer rekening :</p>
-							<p style="font-size: 1.3rem" id="no_rekening_ssm">BNI 12345678</p>
+							<p style="font-size: 1.3rem" id="norek_bank">BCA | 797-038-5678</p>
 							<!--end: Datatable -->
 							<div style="margin-top: 20px" class="row">
 								<div align="center" class="col-sm">
