--- a/admin_toko/print_spk_survey.html
+++ b/admin_toko/print_spk_survey.html
@@ -56,6 +56,9 @@
 			.table {
 				min-height : 300px !important;
 			}
+			.header-pesanan {
+				font-size: 2rem !important;
+			}
 
 			th {
 				font-size: 1.7rem !important;
@@ -66,7 +69,7 @@
 			}
 
 			p {
-				font-size: 1.8rem !important;
+				font-size: 1.5rem !important;
 			}
 			label {
 				font-size: 1.6rem !important;
@@ -459,6 +462,23 @@
 									</div>
 								</div>
 							</div>
+							<div style="margin-top: 20px;" class="m-portlet--mobile row">
+								<p align="justify" >Dengan ini saya telah melakukan survey bersama pihak I dan pihak II. Hasil survey telah disetujui oleh kedua belah pihak dan apabila sudah dikerjakan ada perubahan maka pihak kedua akan dikenakan <b>"Biaya Bongkar Pasang dan Biaya Tambahan Material".</b><br><br>
+								Demikian surat perjanjian / pernyataan ini dibuat oleh kedua belah pihak dan apabila salah satu pihak mengingkari bersedia dituntut sesuai hukum yang berlaku</p>
+								<div align="right" class="col-xl-12">
+									<p>Makassar,  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2018</p>
+								</div>
+								<div align="center" class="col-sm">
+									<p><b>PIHAK I,</b></p>
+									<div style="height: 150px"></div>
+									<p>______________________________</p>
+								</div>
+								<div align="center" class="col-sm">
+									<p><b>PIHAK II,</b></p>
+									<div style="height: 150px"></div>
+									<p>______________________________</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>	
@@ -533,7 +553,7 @@
 			});
 		</script>
 		<script type="text/javascript">
-			var delayInMilliseconds = 1000; //1 second
+			var delayInMilliseconds = 800; //1 second
 
 			setTimeout(function() {
 				print();	
