--- a/admin_toko/rincian_nota.html
+++ b/admin_toko/rincian_nota.html
@@ -390,6 +390,9 @@
 															<option value="2">
 																BCA | 797-013-3393
 															</option>
+															<option value="3">
+																MANDIRI | 130003302363
+															</option>
 														</select>
 													</div>
 												</div>
