--- a/admin_hrd/manajemen_penugasan.html
+++ b/admin_hrd/manajemen_penugasan.html
@@ -9,13 +9,13 @@
 	Like: www.facebook.com/keenthemes
 	Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
 	Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-	License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project. -->
+	License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.-->
 	<html lang="en" >
 	<!-- begin::Head -->
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Admin Toko | Rincian SPK
+			Admin HRD | Dashboard
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,11 +43,6 @@
 		<!-- end:: Style tambahan -->
 		<!--end::Base Styles -->
 		<link rel="shortcut icon" href="../assets/demo/default/media/img/logo/favicon.ico" />
-		<style>
-			.m-datatable.m-datatable--default > .m-datatable__pager > .m-datatable__pager-info {
-				display: none !important;
-			}
-		</style>
 	</head>
 	<!-- end::Head -->
 	<!-- end::Body -->
@@ -136,7 +131,7 @@
 						<!-- ASIDE MENU DISINI -->
 						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
 							<!-- DASHBOARD -->
-							<li class="m-menu__item " aria-haspopup="true" >
+							<li class="m-menu__item  " aria-haspopup="true" >
 								<a  href="index.html" class="m-menu__link ">
 									<i class="m-menu__link-icon flaticon-line-graph"></i>
 									<span class="m-menu__link-title">
@@ -148,138 +143,40 @@
 									</span>
 								</a>
 							</li>
-							<!-- Manajemen Pelanggan -->
+							<!-- Manajemen Penugasan -->
+							<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
+								<a  href="manajemen_penugasan.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa fa-puzzle-piece"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Manajemen Penugasan
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
+							<!-- Kepuasan Pelanggan -->
+							<li class="m-menu__item" aria-haspopup="true" >
+								<a  href="kepuasan_pelanggan.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa 	fa-thumbs-up"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Kepuasan Pelanggan
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
+							<!-- Manajemen User -->
 							<li class="m-menu__item  " aria-haspopup="true" >
-								<a  href="manajemen_pelanggan.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
+								<a  href="manajemen_user.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa 		fa-user-o"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Manajemen	Pelanggan
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
-							<!-- Manajemen Pesanan -->
-							<li class="m-menu__item  m-menu__item--submenu m-menu__item--open m-menu__item--expanded" aria-haspopup="true" data-menu-submenu-toggle="hover">
-								<a href="#" class="m-menu__link m-menu__toggle">
-									<i class="m-menu__link-icon flaticon-folder-2"></i>
-									<span class="m-menu__link-text">
-										Manajemen Pesanan
-									</span>
-									<i style="font-size: 1.5rem" class="m-menu__ver-arrow fa fa-caret-right"></i>
-								</a>
-								<div class="m-menu__submenu " style="">
-									<span class="m-menu__arrow"></span>
-									<ul class="m-menu__subnav">
-										<li class="m-menu__item  m-menu__item--parent" aria-haspopup="true">
-											<span class="m-menu__link">
-												<span class="m-menu__link-text">
-													Pesanan
-												</span>
-											</span>
-										</li>
-										<li class="m-menu__item  " aria-haspopup="true">
-											<a href="spk_pemasangan.html" class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Pemasangan
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_servis.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Servis
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_free.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Free
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item m-menu__item--active" aria-haspopup="true">
-											<a href="spk_komplain.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Komplain
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_survey.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Survey
-												</span>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<!-- Manajemen Penawaran -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="manajemen_penawaran.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Manajemen Penawaran
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
-							<!-- Master Stock -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="master_stock.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-list-1"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Master Stock
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
-							<!-- Harga Item dan Jasa -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="manajemen_harga.html" class="m-menu__link ">
-									<i class="m-menu__link-icon la la-list"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Manajemen Harga
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
-							<!-- Manajemen Pembayaran -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="manajemen_pembayaran.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-file-1"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												manajemen pembayaran
+												Manajemen User
 											</span>
 										</span>
 									</span>
@@ -296,7 +193,7 @@
 						<div class="d-flex align-items-center">
 							<div class="mr-auto">
 								<h3 class="m-subheader__title m-subheader__title--separator">
-									Rincian SPK
+									Manajemen Penugasan
 								</h3>
 								<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 									<li class="m-nav__item m-nav__item--home">
@@ -308,29 +205,9 @@
 										-
 									</li>
 									<li class="m-nav__item">
-										<a href="#.html" class="m-nav__link">
+										<a href="manajemen_penugasan.html" class="m-nav__link">
 											<span class="m-nav__link-text">
-												Manajemen Pesanan
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="spk_pemasangan.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												SPK Komplain
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="rincian_spk_pemasangan.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												Rincian
+												Penugasan
 											</span>
 										</a>
 									</li>
@@ -343,115 +220,113 @@
 						<div class="row">
 							<div class="col-xl-12">
 								<div class="m-portlet m-portlet--mobile">
-									<div class="m-portlet__head header">
-										<h3 class="header-pesanan">
-										</h3><br>
-										<h3 name="no_surat_jalan" class="header-pesanan-no"> 
-											<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
-										</h3><br><br>
-										<div class="info row">
-											<div class="col-sm">
-												<p id="tanggal_surat">
-													<i class="flaticon-calendar-2"> </i>20/11/19
-												</p> 
-												<p id="nama_pelanggan">
-													<i class="flaticon-users"> </i> Ahmad Rifaldi
-												</p>
-												<p id="no_telpon">
-													<i class="fa fa-phone"> </i> 085-145-322-137
-												</p>
-												<p>
-													Tanggal Mulai : 
-													<span id="tgl_mulai">
-													23/03/19 10.10</span>
-												</p>
-												<p>
-													Tanggal Selesai : <span id="tgl_selesai">25/03/19 11.15</span>
-												</p>
-											</div>
-											<div class="col-sm">
-												<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
-												<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
-												<p>Teknisi : <span id="nama_teknisi">Ridwan</span></p>
-												<p>Status : <span id="status_spk">Selesai</span></p>
-											</div>
-										</div>	
-									</div>
 									<div class="m-portlet__body">
-										<!--end: Search Form -->
-										<!--begin: Datatable -->
-										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_rincian_spk">
-											<thead>
-												<tr>
-													<th>No</th>
-													<th>Nama Barang</th>
-													<th>Jumlah</th>
-													<th>Keterangan</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>1</td>
-													<td>AC Split 1/2 PK Daikin R32 Non Inverter Thailand</td>
-													<td>2</td>
-													<td>-</td>
-												</tr>
-											</tbody>
-										</table>
-										<!--end: Datatable -->
-										<div class="form-group m-form__group">
-										<label for="exampleTextarea">
-											Keterangan Komplain
-										</label>
-										<textarea style="resize: none" id="keterangan_komplain" class="form-control m-input" rows="3"></textarea>
-									</div>
-									</div>
-
-									<div class="m-portlet__body gambar_pemasangan">
-										<div class="m-accordion__item">
-											<div class="m-accordion__item-head collapsed" role="tab" id="m_accordion_1_item_3_head" data-toggle="collapse" href="#m_accordion_1_item_3_body" aria-expanded="    false">
-												<span class="m-accordion__item-title">
-													<button class="btn btn-primary">
-														Lihat Gambar Pemasangan
-													</button>
-												</span>
-												<span class="m-accordion__item-mode"></span>
-											</div>
-											<div class="m-accordion__item-body collapse" id="m_accordion_1_item_3_body" class=" " role="tabpanel" aria-labelledby="m_accordion_1_item_3_head" data-parent="#m_accordion_1">
-												<div class="m-accordion__item-content">
-													<div class="row">
-														<div class="heading col-sm">
-															<h5 align="center">Sebelum</h5>
+										<!--begin: Search Form -->
+										<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+											<div class="row align-items-center">
+												<div class="col-md-12">
+													<div class="form-group m-form__group row align-items-center">
+														<div class="col-md-4">
+															<div class="m-portlet__head-title">
+																<h3 class="m-portlet__head-text">
+																	List SPK
+																</h3>
+															</div>
 														</div>
-														<div class="heading col-sm">
-															<h5 align="center">Sesudah</h5>
-														</div>
-													</div>
-													<div id="item[0]" class="row">
-														<div class=" col-sm">
-															<img name="gambar_sebelum" class="gambar" src="https://s1.bukalapak.com/img/1376695601/w-1000/LG_AC_INVERTER_3_4_PK_T08EMV1_TERMURAH.jpg">
-
-														</div>
-														<div class=" col-sm">
-															<img name="gambar_sesudah" class="gambar" src="https://s1.bukalapak.com/img/1376695601/w-1000/LG_AC_INVERTER_3_4_PK_T08EMV1_TERMURAH.jpg">
-
-														</div>
-													</div>
-													<div id="item[1]" class="row">
-														<div class=" col-sm">
-															<img name="gambar_sebelum" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
-														</div>
-														<div class=" col-sm">
-															<img name="gambar_sesudah" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
+														<div class="col-md-4 offset-md-4">
+															<div class="m-input-icon m-input-icon--left">
+																<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+																<span class="m-input-icon__icon m-input-icon__icon--left">
+																	<span>
+																		<i class="la la-search"></i>
+																	</span>
+																</span>
+															</div>
 														</div>
 													</div>
 												</div>
 											</div>
 										</div>
-									</div>
-									<div class="m-portlet__body" align="center">
-										<button type="button" class="btn btn-primary btn_buat_spk_komplain" id="btn_buat_spk_komplain">Buat SPK Komplain</button>
+										<!--end: Search Form -->
+										<!--begin: Datatable -->
+										<!-- <div class="m_datatable" id="local_data"></div> -->
+										<table class="table" id="tbl_spk_pemasangan">
+											<thead>
+												<tr>
+													<th>No</th>
+													<th>Tanggal</th>
+													<th>No SPK</th>
+													<th>Nama Pelanggan</th>
+													<th>No Telpon</th>
+													<th>Tipe</th>
+													<th>Status</th>
+													<th>Aksi</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>1</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Bpk. Hendy</td>
+													<td>085145322137</td>
+													<td>Pemasangan</td>
+													<td>Pengerjaan</td>
+													<td>
+														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>2</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Bpk. Suminto</td>
+													<td>085145322137</td>
+													<td>Pemasangan</td>
+													<td>Pengerjaan</td>
+													<td>
+														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>3</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Bpk. Suminto</td>
+													<td>085145322137</td>
+													<td>Servis</td>
+													<td>Pengerjaan</td>
+													<td>
+														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>4</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Ibu Ida</td>
+													<td>085145322137</td>
+													<td>Survey</td>
+													<td>Selesai</td>
+													<td>
+														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+												<tr>
+													<td>5</td>
+													<td>20/19/2018</td>
+													<td>1923102301</td>
+													<td>Ibu Munna</td>
+													<td>085145322137</td>
+													<td>Pemasangan</td>
+													<td>Selesai</td>
+													<td>
+														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+										<!--end: Datatable -->
 									</div>
 								</div>
 							</div>
@@ -491,11 +366,10 @@
 		<!--end::Page Vendors -->  
 		<!--begin::Page Snippets -->
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-
 		<!--end::Page Snippets -->
 		<script src="http://localhost:35729/livereload.js"></script>
 		<script type="text/javascript">
-			var tbl_rincian_spk = $('#tbl_rincian_spk').mDatatable({
+			var tbl_spk_pemasangan = $('#tbl_spk_pemasangan').mDatatable({
 				data: {
 					saveState: {cookie: false},
 					/*type: 'remote',
@@ -538,48 +412,40 @@
 				{
 					field: 'No',
 					textAlign: 'center',
-					
+					width: 50
 				},
 				{
-					field: 'Nama Barang',
+					field: 'Tanggal',
+					textAlign: 'center',
+					type:'date',
+					format: 'DD/MM/YYYY',
+				},
+				{
+					field: 'No SPK',
 					textAlign: 'center',
 				},
 				{
-					field: 'Jumlah',
+					field: 'Nama Pelanggan',
 					textAlign: 'center',
 				},
 				{
-					field: 'Keterangan',
+					field: 'No Telpon',
+					textAlign: 'center',
+				},
+				{
+					field: 'Tipe',
+					textAlign: 'center',
+				},
+				{
+					field: 'Status',
+					textAlign: 'center',
+				},
+				{
+					field: 'Aksi',
 					textAlign: 'center',
 				}
 
 				],
-			});
-		</script>
-		<script>
-			//== Class definition
-			var SweetAlert2Demo = function() {
-
-			//== Demos
-			var initDemos = function() {
-
-				$('#btn_buat_spk_komplain').click(function(e) {
-					swal("SPK Telah Terbit!", "SPK yang anda buat telah terbit","success");
-				});
-
-			};
-
-			return {
-					//== Init
-					init: function() {
-						initDemos();
-					},
-				};
-			}();
-
-			//== Class Initialization
-			jQuery(document).ready(function() {
-				SweetAlert2Demo.init();
 			});
 		</script>
 	</body>
