Revisi print surat jalan, halaman list peminjaman inventory dan tambahan kategori pada masterstock

--- a/admin_gudang/index.html
+++ b/admin_gudang/index.html
@@ -266,7 +266,7 @@
 										</div>
 										<!--begin::Widget 7-->
 										<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
-											<span  id="total_surat_jalan" class="item-font">92</span> Item
+											<span  id="total_surat_jalan" class="item-font">92</span> Surat
 										</div>
 									</div>
 								</div>
@@ -289,7 +289,7 @@
 											</span>
 										</div>
 										<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
-											<span  id="total_bukti_pengeluaran_material" class="item-font">70</span> Item
+											<span  id="total_bukti_pengeluaran_material" class="item-font">70</span> Surat
 										</div>
 									</div>
 								</div>
