--- a/admin_gudang/master_stock.html
+++ b/admin_gudang/master_stock.html
@@ -297,6 +297,28 @@
 													<input type="text" name="input_satuan_barang" class="form-control m-input" placeholder="satuan barang">
 												</div>
 												<div class="col-lg-6">
+													<label>
+														Kategori:
+													</label>
+													<select style="width: 100%" class="form-control m-select2 dropdown_search" name="kategori_item">
+														<option value="0">
+															--Pilih Kategori--
+														</option>
+														<option value="1">
+															Unit
+														</option>
+														<option value="2">
+															Material
+														</option>
+														<option value="3">
+															Sparepart
+														</option>
+														<option value="4">
+															Jasa
+														</option>
+													</select>
+												</div>
+												<div class="col-lg-6">
 													<label class="">
 														Nama:
 													</label>
@@ -346,7 +368,7 @@
 													</label>
 													<textarea style="resize: none; height: 90px" class="form-control m-input m-input--solid" id="keterangan_barang" rows="3"></textarea>
 												</div>
-												<div class="col-lg-6">
+												<div class="offset-lg-6 col-lg-6">
 													<br><br>
 													<button type="button" style="width:inherit;" class="btn btn-success" id="btn_tambah" >tambahkan</button>
 												</div>
