--- a/admin_gudang/tambah_surat_jalan.html
+++ b/admin_gudang/tambah_surat_jalan.html
@@ -316,7 +316,23 @@
 													No. SPK
 												</label>
 												<div class="col-10">
-													<input class="form-control m-input" type="text" value="0037/SSM/SPK-PSG/MKS/III/2019" id="no_spk">
+													<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="nama_barang">
+														<option value="0">
+															--Pilih SPK--
+														</option>
+														<option value="1">
+															001/SSM/SPK-PSG/MKS/III/2019
+														</option>
+														<option value="2">
+															002/SSM/SPK-PSG/MKS/III/2019
+														</option>
+														<option value="3">
+															003/SSM/SPK-PSG/MKS/III/2019
+														</option>
+														<option value="4">
+															004/SSM/SPK-PSG/MKS/III/2019
+														</option>
+													</select>
 												</div>
 											</div>
 											<div class="form-group m-form__group row">
@@ -332,7 +348,7 @@
 													Nama Pelanggan
 												</label>
 												<div class="col-10">
-													<input class="form-control m-input" type="text" value="Ibu Ani" id="nama_pelanggan">
+													<input disabled="" class="form-control m-input" type="text" value="Ibu Ani" id="nama_pelanggan">
 												</div>
 											</div>
 											<div class="form-group m-form__group row">
@@ -340,7 +356,7 @@
 													Nomer Telpon
 												</label>
 												<div class="col-10">
-													<input class="form-control m-input" type="tel" value="085 145 322 137" id="no_telpon">
+													<input disabled="" class="form-control m-input" type="tel" value="085 145 322 137" id="no_telpon">
 												</div>
 											</div>
 											<div class="form-group m-form__group row">
@@ -348,7 +364,7 @@
 													Email
 												</label>
 												<div class="col-10">
-													<input class="form-control m-input" type="email" value="nihonggomantappu@example.com" id="email_pelanggan">
+													<input disabled="" class="form-control m-input" type="email" value="nihonggomantappu@example.com" id="email_pelanggan">
 												</div>
 											</div>
 											<div class="form-group m-form__group row">
@@ -356,7 +372,7 @@
 													Alamat
 												</label>
 												<div class="col-10">
-													<input class="form-control m-input" type="text" value="Jl. Angkasa 5, Panaikang, Makassar" id="alamat_pelanggan">
+													<input disabled="" class="form-control m-input" type="text" value="Jl. Angkasa 5, Panaikang, Makassar" id="alamat_pelanggan">
 												</div>
 											</div>
 											<div class="form-group m-form__group row">
@@ -364,7 +380,7 @@
 													Kendaraan
 												</label>
 												<div class="col-10">
-													<input class="form-control m-input" type="text" value="Toyota" id="merek_kendaraan">
+													<input class="form-control m-input" type="text" value="Toyota" name="merek_kendaraan">
 												</div>
 											</div>
 											<div class="form-group m-form__group row">
@@ -372,7 +388,7 @@
 													No. DD
 												</label>
 												<div class="col-10">
-													<input class="form-control m-input" type="text" value="DD 111 FL" id="dd_kendaraan">
+													<input class="form-control m-input" type="text" value="DD 111 FL" name="dd_kendaraan">
 												</div>
 											</div>
 									<!-- <div class="form-group m-form__group row">
@@ -431,7 +447,7 @@
 												<td>AC Split 1/2 PK daikin R32 Non Inverter Thailand</td>
 												<td>2</td>
 												<td>
-													<a class="btn btn-sm btn-danger btn_hapus" style="color:white; width:80px;">Hapus</a>
+													<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;">Hapus</a>
 												</td>
 											</tr>
 											<tr>
@@ -439,7 +455,7 @@
 												<td>AC Split 1 PK daikin R32 Non Inverter Thailand</td>
 												<td>1</td>
 												<td>
-													<a class="btn btn-sm btn-danger btn_hapus" style="color:white; width:80px;">Hapus</a>
+													<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;">Hapus</a>
 												</td>
 											</tr>
 										</tbody>
@@ -471,7 +487,7 @@
 												<td>Material A</td>
 												<td>2</td>
 												<td>
-													<a class="btn btn-sm btn-danger btn_hapus" style="color:white; width:80px;">Hapus</a>
+													<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;">Hapus</a>
 												</td>
 											</tr>
 											<tr>
@@ -479,7 +495,7 @@
 												<td>Material B</td>
 												<td>1</td>
 												<td>
-													<a class="btn btn-sm btn-danger btn_hapus" style="color:white; width:80px;">Hapus</a>
+													<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;">Hapus</a>
 												</td>
 											</tr>
 										</tbody>
