--- a/admin_toko/print_spk_survey.html
+++ b/admin_toko/print_spk_survey.html
@@ -131,7 +131,10 @@
 				<div class="col-xl-12">
 					<div class="m-portlet m-portlet--tab">
 						<div class="m-portlet__head header">
-							<h3 class="header-pesanan">
+							<div style="margin-top: 10px" align="center">
+								<img style="height: auto;width: 280px" src="../assets/demo/default/media/img/misc/logo_print.png">
+							</div>
+							<h3 align="center" class="header-pesanan">
 								SPK SURVEY
 							</h3><br>
 							<h3 name="no_surat_jalan" class="header-pesanan-no"> 
@@ -471,13 +474,13 @@
 								</div>
 								<div align="center" class="col-sm">
 									<p><b>PIHAK I,</b></p>
-									<div style="height: 150px"></div>
-									<p>______________________________</p>
+									<div style="height: 60px"></div>
+									<div style="width: 15vw;border-bottom: 1px solid black"></div>
 								</div>
 								<div align="center" class="col-sm">
 									<p><b>PIHAK II,</b></p>
-									<div style="height: 150px"></div>
-									<p>______________________________</p>
+									<div style="height: 60px"></div>
+									<div style="width: 15vw;border-bottom: 1px solid black"></div>
 								</div>
 							</div>
 						</div>
