--- a/admin_toko/rincian_spk_komplain.html
+++ b/admin_toko/rincian_spk_komplain.html
@@ -382,8 +382,26 @@
 									</div>
 									<div class="m-portlet__body">
 										<p>Keterangan Komplain</p>
-										<textarea style="resize: none;font-size: 1.2rem" class="form-control m-input m-input--solid" name="keterangan_komplain"rows="5">Pipa Bocor dan Remote Ac tidak berfungsi</textarea>
+										<textarea disabled="" style="resize: none;font-size: 1.2rem" class="form-control m-input m-input--solid" name="keterangan_komplain"rows="5">Pipa Bocor dan Remote Ac tidak berfungsi</textarea>
 									</div>
+									<div class="m-portlet__body">
+							<h4 align="center">Respon</h4>
+							<h5>Customer, Puaskh anda dengan service kami ?</h5>
+							<div class="m-radio-inline">
+								<label class="m-radio">
+									<input checked="" type="radio" name="kepuasan_servis_pelanggan" disabled="" value="1">
+									<b>Ya</b>
+									<span></span>
+								</label>
+								<label class="m-radio">
+									<input disabled="" type="radio" name="kepuasan_servis_pelanggan" value="2">
+									<b>Tidak</b>
+									<span></span>
+								</label>
+							</div>
+							<h5>Komentar :</h5>
+							<textarea style="resize: none;font-size: 1.2rem !important;text-align: center;" class="form-control m-input m-input--solid" disabled="" name="komentar_pelanggan"rows="3">Servisnya Bagus dan rapih</textarea>
+						</div>
 								</div>
 							</div>
 						</div>
