--- a/admin_toko/rincian_spk_servis.html
+++ b/admin_toko/rincian_spk_servis.html
@@ -393,6 +393,12 @@
 									</div>
 									<div class="m-portlet__body">
 										<h4 align="center">
+											Keterangan Pekerjaan
+										</h4>
+										<textarea disabled="" style="resize: none" class="form-control m-input m-input--solid" id="keterngan_pekerjaan" rows="3">2 unit servis pembersihan ac</textarea>
+									</div>
+									<div class="m-portlet__body">
+										<h4 align="center">
 											Pengecekan Awal
 										</h4>
 										<table style="width: 100%" class="tg">
