--- a/admin_gudang/tambah_inventory.html
+++ b/admin_gudang/tambah_inventory.html
@@ -317,6 +317,14 @@
 													<input class="form-control m-input" type="text" value="" id="no_seri">
 												</div>
 											</div>
+											<div class="form-group m-form__group row">
+												<label  class="col-2 col-form-label">
+													Jumlah
+												</label>
+												<div class="col-10">
+													<input class="form-control m-input" type="number" value="" id="jumlah_barang">
+												</div>
+											</div>
 												<div class="form-group m-form__group row">
 												<label  class="col-2 col-form-label">
 													Upload Gambar
