--- a/admin_toko/print_spk_komplain.html
+++ b/admin_toko/print_spk_komplain.html
@@ -109,43 +109,84 @@
 				<div class="col-xl-12">
 					<div class="m-portlet m-portlet--tab">
 						<div class="m-portlet__head header">
-							<h3 class="header-pesanan">
-								SPK KOMPLAIN
-							</h3><br>
-							<h3 name="no_surat_jalan" class="header-pesanan-no"> 
-								<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
-							</h3><br><br>
-							<div class="info row">
-								<div class="col-sm">
-									<p id="tanggal_surat">
-										<i class="flaticon-calendar-2"> </i>20/11/19
-									</p> 
-									<p id="nama_pelanggan">
-										<i class="flaticon-users"> </i> Ahmad Rifaldi
-									</p>
-									<p id="no_telpon">
-										<i class="fa fa-phone"> </i> 085-145-322-137
-									</p>
-									<p>
-										Tanggal Mulai : 
-										<span id="tgl_mulai">
-										23/03/19 10.10</span>
-									</p>
-									<p>
-										Tanggal Selesai : <span id="tgl_selesai">25/03/19 11.15</span>
-									</p>
+							<div style="margin-top: 10px" align="center">
+								<img style="height: auto;width: 280px" src="../assets/demo/default/media/img/misc/logo_print.png">
+								<h2 class="header-pesanan">
+									SPK KOMPLAIN
+								</h2>
+								<h4>No Surat : <span name="no_surat_jalan">0037/SSM/SPK-PSG/MKS/III/2019</span></h4>
+								<h4>Tanggal : <span name="tanggal_surat">20/11/2019</span></h4>
+								<h5>Tipe Pajak : <span name="tipe_pajak">Non-Pajak</span></h5>
+							</div>
+							<div style="margin-top: 20px" class="info row">
+								<div align="center" class="col-sm">
+									<h5>Nama Pelanggan: <span name="nama_pelanggan">Ahmad Rifaldi</span></h5>
+									<h5>Telpon: <span name="telpon_pelanggan"> 085-145-322-137</span></h5>
+									<h5>Tanggal Mulai: <span name="tgl_mulai"> 23/03/19 10.10</span></h5>
+									<h5>Tanggal Selesai: <span name="tgl_selesai"> 24/03/19 11.10</span></h5>
 								</div>
-								<div class="col-sm">
-									<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
-									<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
-									<p>Teknisi : <span id="nama_teknisi">Ridwan</span></p>
-									<p>Status : <span id="status_spk">Selesai</span></p>
+								<div align="center" class="col-sm">
+									<h5>Alamat: <span name="alamat_pelanggan"> Jl. Poros Malino, Griya Riski Abadi blok C6</span></h5>
+									<h5>Teknisi: <span name="nama_teknisi"> Ridwan</span></h5>
+									<h5>Status: <span name="status_spk">SELESAI</span></h5>
 								</div>
 							</div>	
 						</div>
 						<div class="m-portlet__body">
-							<p>Keterangan Komplain</p>
-							<textarea style="resize: none;font-size: 1.2rem" class="form-control m-input m-input--solid" name="keterangan_komplain"rows="5">Pipa Bocor dan Remote Ac tidak berfungsi</textarea>
+							<h4 align="center">Keterangan Komplain</h4>
+							<textarea style="resize: none;font-size: 1.8rem !important;text-align: center;" class="form-control m-input m-input--solid" name="keterangan_komplain"rows="5">Pipa Bocor dan Remote Ac tidak berfungsi</textarea>
+						</div>
+						<div class="m-portlet__body">
+							<h4 align="center">Respon</h4>
+							<h5>Customer, Puaskh anda dengan service kami ?</h5>
+							<div class="m-radio-inline">
+								<label class="m-radio">
+									<input checked="" type="radio" name="kepuasan_servis_pelanggan" disabled="" value="1">
+									<b>Ya</b>
+									<span></span>
+								</label>
+								<label class="m-radio">
+									<input disabled="" type="radio" name="kepuasan_servis_pelanggan" value="2">
+									<b>Tidak</b>
+									<span></span>
+								</label>
+							</div>
+							<h5>Komentar :</h5>
+							<textarea style="resize: none;font-size: 1.8rem !important;text-align: center;" class="form-control m-input m-input--solid" disabled="" name="komentar_pelanggan"rows="3">Servisnya Bagus dan rapih</textarea>
+						</div>
+						<div class="row col-xl-12">
+							<div align="center" class="col-sm">
+								<h5>Nama, Paraf dan Cap Perusahaan</h5>
+								<br>
+								<br>
+								<br>
+								<br>
+								<div style="width: 15vw;border-bottom: 1px solid black"></div>
+							</div>
+							<div align="center" class="col-sm">
+								<h5>Nama, Paraf Teknisi/Sopir</h5>
+								<br>
+								<br>
+								<br>
+								<br>
+								<div style="width: 15vw;border-bottom: 1px solid black"></div>
+							</div>
+							<div align="center" class="col-sm">
+								<h5>Nama, Paraf Marketing</h5>
+								<br>
+								<br>
+								<br>
+								<br>
+								<div style="width: 15vw;border-bottom: 1px solid black"></div>
+							</div>
+							<div align="center" class="col-sm">
+								<h5>Nama, Paraf dan Cap Admin</h5>
+								<br>
+								<br>
+								<br>
+								<br>
+								<div style="width: 15vw;border-bottom: 1px solid black"></div>
+							</div>
 						</div>
 					</div>
 				</div>	
@@ -157,11 +198,12 @@
 <script src="../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script>
 <script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
 <script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 			var delayInMilliseconds = 1000; //1 second
 
 			setTimeout(function() {
 				print();	
 			}, delayInMilliseconds);
-		</script>
+		</script> -->
+
 		</html>
