--- a/admin_toko/tambah_spk_servis.html
+++ b/admin_toko/tambah_spk_servis.html
@@ -433,7 +433,7 @@
 													Keterangan 
 												</label>
 												<div class="col-10">
-													<textarea style="resize: none" class="form-control m-input m-input--solid" name="keterangan" rows="3"></textarea>
+													<textarea style="resize: none" class="form-control m-input m-input--solid" id="keterangan_pekerjaan" rows="3"></textarea>
 												</div>
 											</div>
 											<div class="form-group m-form__group row">
